...
    "privacy_heading" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your privacy comes first"
          }
        }
      }
    },
    "reduce_motion_label" : {
      "extractionState" : "manual",
...
